# project_recognizing_handwritten_digits

./: README.md  best_model.keras  models_scores.csv  pyproject.toml  recognizing_handwritten_digits.ipynb  what-is-torch-nn-really.ipynb
src/project_recognizing_handwritten_digits/pytorch/: data_exploration.py  dataset.py
