[project]
name = "project_recognizing_handwritten_digits"
version = "0.1.0"
description = ""
authors = [
    {name = "Subrata Mondal", email = "subratasubha2@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
